src/main/java/com/example/postBlog/error/CommentDoesNotExistException.java
package com.example.postBlog.error;

public class CommentDoesNotExistException extends RuntimeException {
    
}
